minor comment cleanup